Update build.xml
JDK 25