@@ -26,9 +26,13 @@
 
   <!-- Compiles the java code (including the usage of library for JUnit -->
   <target name="compile" depends="makedir">
-    <javac compiler="modern" srcdir="${src.dir}" destdir="${build.dir}" classpath="${lib.dir}/commons-logging-1.1.2.jar:${lib.dir}/commons-net-1.4.1.jar:${lib.dir}/RosBase.jar:${lib.dir}/RosMsgs.jar:${lib.dir}/RockSack.jar:{lib.dir}/rocksdbjni-9.10.0-win64.jar:${lib.dir}/Relatrix.jar">
-    </javac>
-
+    <!--<javac compiler="modern" srcdir="${src.dir}" destdir="${build.dir}" classpath="${lib.dir}/commons-logging-1.1.2.jar:${lib.dir}/commons-net-1.4.1.jar:${lib.dir}/RosBase.jar:${lib.dir}/RosMsgs.jar:${lib.dir}/RockSack.jar:{lib.dir}/rocksdbjni-9.10.0-win64.jar:${lib.dir}/Relatrix.jar">
+    </javac>-->
+	<javac srcdir="${src.dir}" destdir="${build.dir}" source="25" target="25" includeantruntime="false" classpath="${lib.dir}/commons-logging-1.1.2.jar:${lib.dir}/commons-net-1.4.1.jar:${lib.dir}/RosBase.jar:${lib.dir}/RosMsgs.jar:${lib.dir}/RockSack.jar:{lib.dir}/rocksdbjni-9.10.0-win64.jar:${lib.dir}/Relatrix.jar">
+  	  <compilerarg value="--enable-preview"/>
+  	  <compilerarg value="--add-modules"/>
+  	  <compilerarg value="jdk.incubator.vector"/>
+  	</javac>
   </target>
 
   <!-- Creates Javadoc -->
